# Assignment5_Paradigms

./: CMakeLists.txt  README.MD  main.cpp  test.py
